--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -5,5 +5,8 @@ $color-accent: #74baab;
 $color-text-title: #1d1d1d;
 $color-text-paragraphs: #303030;
 $color-bgLight:#fff;
+$color-textLight:#fff;
+
+
 //BOX SHADOW
 $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
