--- a/front/src/styles/globals.scss
+++ b/front/src/styles/globals.scss
@@ -31,7 +31,7 @@ body {
   direction: rtl;
   margin: auto;
   max-width: 135rem;
-  min-height: 100vh;
+  height: 100vh;
   background-color: $color-bgBody;
   overflow-x: hidden;
   color: $color-text-paragraphs;
