define admin page

--- a/front/components/layout/Layout.module.scss
+++ b/front/components/layout/Layout.module.scss
@@ -3,7 +3,7 @@
 .mainContainer{
       background-color: $color-bgLight;
       border-radius: 0px 0px 2.5rem 2.5rem;
-      height: 100vh;
+      padding-bottom: 10rem;
       margin-bottom: 5rem;
 
 }
