define modal as context and wrap around the project

--- a/front/components/templates/AdminPage/AdminPage.module.scss
+++ b/front/components/templates/AdminPage/AdminPage.module.scss
@@ -1,7 +1,7 @@
 @import "../../../src/styles/variables";
 
 .containerProductManagement {
-  padding: 3rem 10rem;
+  padding: 0 10rem;
   .containerProductManagement__title {
     display: flex;
     align-items: center;
