define registration page

--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $color-text-title: #1d1d1d;
 $color-text-paragraphs: #303030;
 $color-bgLight:#fff;
 $color-textLight:#fff;
+$color-placeholder:rgba(40, 40, 40, 0.4);
 
 
 //BOX SHADOW
