define some changes to showing icons in header and change server side rendering according gettiing token

--- a/front/components/layout/Header/Header.module.scss
+++ b/front/components/layout/Header/Header.module.scss
@@ -47,6 +47,7 @@
       color: $color-accent;
       padding: 1rem;
       border-radius: 1rem;
+      margin-left: 1rem;
 
       svg {
         font-size: 2rem;
