define toast notifications according notifications function  for each action in project

--- a/front/components/modules/ProductItem/ProductItem.module.scss
+++ b/front/components/modules/ProductItem/ProductItem.module.scss
@@ -1,6 +1,9 @@
 @import "../../../src/styles/variables";
 
 .containerProductInfo {
+  .productDetails{
+    color: $color-accent;
+  }
   .containerProductInfo__actionBtns {
     display: flex;
     align-items: center;
